# AgenticBlockTransfer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  accessibility.md  architecture.md  changelog.md  cli.md  commands.md  compliance.md  configuration.md  contributing.md  formats.md  gui.md  installation.md  introduction.md  localization.md  mcp.md  ontology.md  performance.md  quickstart.md  safety.md  security.md  tui.md
media/video/src/: AbtVideo.tsx  Root.tsx  theme.ts
media/video/src/scenes/: ArchScene.tsx  CliScene.tsx  FormatsScene.tsx  IntroScene.tsx
src/: lib.rs  main.rs
src/cli/: mod.rs
src/cli/commands/: backup.rs  bench.rs  boot.rs  cache.rs  catalog.rs  checksum.rs  checksum_file.rs  clone.rs  completions.rs  customize.rs  diff.rs  drive_constraints.rs  drive_scan.rs  elevate.rs  erase.rs  ffu.rs  fleet.rs  format.rs  fs_detect.rs  health.rs  info.rs  isohybrid.rs  list.rs  man.rs  mirror.rs  mod.rs  multiboot.rs  ontology.rs  optical.rs  persist.rs  proclock.rs  restore.rs  secureboot.rs  signature.rs  syslinux.rs  telemetry.rs  uefi_ntfs.rs  update.rs  usb_info.rs  verify.rs  (+5 more)
src/core/: a11y.rs  backup.rs  bench.rs  blocksize.rs  boot.rs  cache.rs  catalog.rs  checksum_file.rs  clone.rs  compliance.rs  config.rs  customize.rs  device.rs  diff.rs  download.rs  download_resume.rs  drive_constraints.rs  drive_scan.rs  elevate.rs  erase.rs  error.rs  fat32.rs  ffu.rs  fleet.rs  format.rs  fs_detect.rs  hasher.rs  health.rs  i18n.rs  image.rs  inhibit.rs  iso9660.rs  isohybrid.rs  loopback.rs  mirror.rs  mod.rs  multiboot.rs  multicast.rs  nbd.rs  notify.rs  (+34 more)
src/gui/: mod.rs
src/mcp/: mod.rs
src/ontology/: mod.rs  openapi.rs
src/platform/: freebsd.rs  linux.rs  macos.rs  mod.rs  stub.rs  windows.rs
src/tui/: mod.rs
tests/: core_tests.rs  integration_tests.rs  verification_proptest.rs
video/: package-lock.json  package.json  tsconfig.json
video/src/scenes/: FeaturesScene.tsx  OutroScene.tsx
